# tech-challenge-modulo-4

./: README.md  main.py  pyproject.toml
Front/: CONFIG.md  INSTALACAO.md  README.md  TROUBLESHOOTING.md  config-script.js  config-styles.css  config.html  index.html  script.js  styles.css  test-audio.html
agents/: __init__.py  prompts.py
agents/audio-analyser/: __init__.py  core.py
agents/emotion-analyser/: __init__.py  core.py
agents/psycological-analyser/: __init__.py  core.py  prompts.py
audios/: base64-en-neutral.txt  base64-pt-br-angry-2.txt  base64-pt-br-fearful.txt  base64-pt-br-sad.txt
clients/: __init__.py  open-ai.py  openrouter.py
helper/: __init__.py  file_converter.py
