[project]
name = "tech-challenge-modulo-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "grandalf>=0.8",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
